# rust-julia-server

./: README.md
cli/: Cargo.toml
cli/src/: dialog.rs  main.rs  price.rs
server/: Cargo.toml
server/src/: main.rs  routes.rs  stop_handle.rs  tasks.rs
server/static/root/: index.html
server/static/root/css/: example.css
src/: dialog.rs  main.rs
