[package]
name = "julia_app"
version = "0.1.0"
edition = "2024"
description = "CLI for the rust-julia server"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
