[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
jlrs = {version = "0.22.1", features = ["async-rt", "tokio-rt"]}
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
parking_lot = "0.12"
actix-web-lab = "0.24"
anyhow = "1.0.102"
actix-files = "0.6.10"
